option java_package = "com.cloudata.keyvalue";

message KvEntry {
	required uint64 store_id = 1;
	required KvAction action = 2;
	optional bytes key = 3;
	optional bytes value = 4;
}

enum KvAction {
	SET = 1;
	DELETE = 2;
}